--- a/package.json
+++ b/package.json
@@ -7,14 +7,16 @@
     "date-fns": "^2.0.0-alpha.27",
     "firebase": "^6.0.2",
     "google-map-react": "^1.1.4",
+    "materialize-css": "^1.0.0",
     "moment": "^2.22.0",
-    "react": "^16.8.6",
+    "react": "^16.12.0",
     "react-cropper": "^1.2.0",
     "react-datepicker": "2.5.0",
-    "react-dom": "^16.8.6",
+    "react-dom": "^16.12.0",
     "react-dropzone": "^10.1.5",
     "react-infinite-scroller": "^1.2.4",
     "react-lazyload": "^2.5.0",
+    "react-materialize": "^3.5.2",
     "react-places-autocomplete": "^7.2.1",
     "react-redux": "^5.1.1",
     "react-redux-firebase": "^2.2.6",
@@ -27,7 +29,7 @@
     "redux-form": "^7.4.2",
     "redux-thunk": "^2.3.0",
     "revalidate": "^1.2.0",
-    "semantic-ui-react": "^0.87.1"
+    "semantic-ui-react": "^0.79.0"
   },
   "scripts": {
     "analyze": "source-map-explorer 'build/static/js/*.js'",
